5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1613_2043.log
== TEST (2019-04-04 18:37:13) 
-- CODE:
nota_1 = float(input(digite a primeira nota: )) 
nota_2 = float(input(digite a segunda nota: )) 
nota_3 = float(input(digite a terceira nota: )) 
nota_4 = float(input(digite a quarta nota: )) 
media_pond = 1*nota_1 + 2*nota_2 + 3*nota_3 + 4*nota_4
print(round(media_pond,2))

-- ERROR:
File "XXXX", line 1
    nota_1 = float(input(digite a primeira nota: )) 
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:37:50) 
-- CODE:
nota_1 = float(input("digite a primeira nota: ")) 
nota_2 = float(input("digite a segunda nota: ")) 
nota_3 = float(input("digite a terceira nota: ")) 
nota_4 = float(input("digite a quarta nota: ")) 
media_pond = 1*nota_1 + 2*nota_2 + 3*nota_3 + 4*nota_4
print(round(media_pond,2))

-- EXECUTION TIME:
0.160755
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
82.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
70.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
79.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:38:21) 
-- CODE:
nota_1 = float(input("digite a primeira nota: ")) 
nota_2 = float(input("digite a segunda nota: ")) 
nota_3 = float(input("digite a terceira nota: ")) 
nota_4 = float(input("digite a quarta nota: ")) 
media_pond = (1*nota_1 + 2*nota_2 + 3*nota_3 + 4*nota_4)/10
print(round(media_pond,2))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:38:46) 
-- CODE:
nota_1 = float(input("digite a primeira nota: ")) 
nota_2 = float(input("digite a segunda nota: ")) 
nota_3 = float(input("digite a terceira nota: ")) 
nota_4 = float(input("digite a quarta nota: ")) 
media_pond = (1*nota_1 + 2*nota_2 + 3*nota_3 + 4*nota_4)/10
print(round(media_pond,2))

-- EXECUTION TIME:
0.152628
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
